--- a/css/styles.css
+++ b/css/styles.css
@@ -11610,7 +11610,6 @@ body {
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  /*background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("../assets/img/forest.jpg");*/
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.7) 100%, #000 100%), url("../assets/img/raytrace.png");
   background-position: center;
   background-repeat: no-repeat;
@@ -11653,6 +11652,53 @@ body {
   }
 }
 
+.masthead_project {
+  position: relative;
+  width: 100%;
+  height: auto;
+  min-height: 35rem;
+  padding: 15rem 0;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.7) 80%, #000 100%), url("../assets/img/tree_wallpaper.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
+}
+.masthead_project h1, .masthead_project .h1 {
+  font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 2.5rem;
+  line-height: 2.5rem;
+  letter-spacing: 0.8rem;
+  background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.8));
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+          background-clip: text;
+}
+.masthead_project h2, .masthead_project .h2 {
+  max-width: 20rem;
+  font-size: 1rem;
+}
+@media (min-width: 768px) {
+  .masthead_project h1, .masthead_project .h1 {
+    font-size: 4rem;
+    line-height: 4rem;
+  }
+}
+@media (min-width: 992px) {
+  .masthead_project {
+    height: 100vh;
+    padding: 0;
+  }
+  .masthead_project h1, .masthead_project .h1 {
+    font-size: 6.5rem;
+    line-height: 6.5rem;
+    letter-spacing: 0.8rem;
+  }
+  .masthead_project h2, .masthead_project .h2 {
+    max-width: 30rem;
+    font-size: 1.25rem;
+  }
+}
 .about-section {
   padding-top: 10rem;
   background-color: rgba(255, 255, 255, 1.0);
